Bug 1843832: Never return the text leaf child of a link when calling IAccessible::accHitTest on an ancestor of the link. r=nlapre

This is necessary to work around a bug in the Windows UI Automation -> IAccessible2 proxy.
See the code comments for details.

Differential Revision: https://phabricator.services.mozilla.com/D187529